--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
-
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Trebuchet MS", Arial, sans-serif;
     background-color: #f8f9fa;
     color: #333;
     margin: 0;
@@ -28,7 +26,7 @@ header {
 }
 
 .logo {
-    height: 50px; /* Adjust size */
+    height: 50px;
     margin-right: 20px;
     position: absolute;
     left: 20px;
@@ -36,6 +34,6 @@ header {
 
 h1 {
     font-size: 28px;
-    font-weight: 700;
+    font-weight: bold;
     margin: 0;
 }
